# Benchmark_LLM_zero_shot_classification

./: .gitignore  Benchmark_LLM.py  functions.py  pyproject.toml
.ipynb_checkpoints/: main_notebook-checkpoint.ipynb
