[tool.poetry]
name = "benchmark-llm-zero-shot-classification"
version = "0.1.0"
description = ""
authors = ["iflogny <iflogny@synergy.fr>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.2.1"
jupyter = "^1.0.0"
scikit-learn = "^1.4.1.post1"
plotly = "^5.20.0"
openpyxl = "^3.1.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
